2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-11-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* json_write.tcl: New package 'json::write', supporting the
	* json_write.test: generation of text in JSON format.
	* json_write.man: Package version 1.
	* json_write.pcx:
	* pkgIndex.tcl: 

2009-11-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* json.tcl: Bumped package to version 1.0.1 due to the bugfix made
	* pkgIndex.tcl: on 2009-04-18.

2009-05-26  KATO Kanryu  <kanryu6@users.sourceforge.net>

	* json.test: improved to compare dicts

2009-04-18  KATO Kanryu  <kanryu6@users.sourceforge.net>

	* json.tcl: fixed to parse last integer
	* json.test: improved to compare dicts

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* json.pcx: New file. Syntax definitions for the public commands
	  of the json package.

2007-12-05  Andreas Kupries  <andreask@activestate.com>

	* json.test: Brought the test results into sync with the ordered
	  dicts of Tcl 8.5. NOTE: This will cause the combination of Tcl
	  8.4 with a backported dict to fail, at least until either the
	  backported dict does the same ordering, or the tests are split
	  into variants, one for both of the two cases. This fixes [Tcllib
	  SF Bug 1844104], reported by Larry Virden
	  <lvirden@users.sourceforge.net>. Thanks.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* json.man: Fixed all warnings due to use of now deprecated