@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin json n 1.0]
-[copyright {2006 ActiveState Software Inc.}]
+[manpage_begin json n 1.1]
+[copyright {2006 ActiveState Software Inc., 2009 Thomas Maeder, Glue Software Engineering AG}]
 [moddesc   {JSON}]
 [titledesc {JSON parser}]
 [category  {CGI programming}]
 [require Tcl 8.4]
-[require json [opt 1.0]]
+[require json [opt 1.1]]
 [keywords json javascript {data exchange} {exchange format}]
 [description]
 [para]
