@@ -3,247 +3,293 @@
 #
 #   See http://www.json.org/ && http://www.ietf.org/rfc/rfc4627.txt
 #
-#   Copyright 2006 ActiveState Software Inc.
+#   Total rework of the code published with version number 1.0 by
+#   Thomas Maeder, Glue Software Engineering AG
 #
-#   $Id: json.tcl,v 1.4 2009/11/24 04:53:46 andreas_kupries Exp $
+#   $Id: json.tcl,v 1.5 2009/12/10 17:48:12 andreas_kupries Exp $
 #
 
-if {$::tcl_version < 8.5} {
+if {![package vsatisfies [package provide Tcl] 8.5]} {
     package require dict
 }
 
-package provide json 1.0.1
+package provide json 1.1
 
-namespace eval json {}
+namespace eval json {
+    # Regular expression for tokenizing a JSON text (cf. http://json.org/)
 
-proc json::getc {{txtvar txt}} {
-    # pop single char off the front of the text
-    upvar 1 $txtvar txt
-    if {$txt eq ""} {
-    	return -code error "unexpected end of text"
+    # tokens consisting of a single character
+    variable singleCharTokens { "{" "}" ":" "\\[" "\\]" "," }
+    variable singleCharTokenRE "\[[join $singleCharTokens {}]\]"
+
+    # quoted string tokens
+    variable escapableREs { "[\\\"\\\\/bfnrt]" "u[[:xdigit:]]{4}" }
+    variable escapedCharRE "\\\\(?:[join $escapableREs |])"
+    variable unescapedCharRE {[^\\\"]}
+    variable stringRE "\"(?:$escapedCharRE|$unescapedCharRE)*\""
+
+    # (unquoted) words
+    variable wordTokens { "true" "false" "null" }
+    variable wordTokenRE [join $wordTokens "|"]
+
+    # number tokens
+    # negative lookahead (?!0)[[:digit:]]+ might be more elegant, but
+    # would slow down tokenizing by a factor of up to 3!
+    variable positiveRE {[1-9][[:digit:]]*}
+    variable cardinalRE "-?(?:$positiveRE|0)"
+    variable fractionRE {[.][[:digit:]]+}
+    variable exponentialRE {[eE][+-]?[[:digit:]]+}
+    variable numberRE "${cardinalRE}(?:$fractionRE)?(?:$exponentialRE)?"
+
+    # JSON token
+    variable tokenRE "$singleCharTokenRE|$stringRE|$wordTokenRE|$numberRE"
+
+
+    # 0..n white space characters
+    set whiteSpaceRE {[[:space:]]*}
+
+    # Regular expression for validating a JSON text
+    variable validJsonRE "^(?:${whiteSpaceRE}(?:$tokenRE))*${whiteSpaceRE}$"
+}
+
+
+# Validate JSON text
+# @param jsonText JSON text
+# @return 1 iff $jsonText conforms to the JSON grammar
+#           (@see http://json.org/)
+proc json::validate {jsonText} {
+    variable validJsonRE
+
+    return [regexp -- $validJsonRE $jsonText]
+}
+
+# Parse JSON text into a dict
+# @param jsonText JSON text
+# @return dict (or list) containing the object represented by $jsonText
+proc json::json2dict {jsonText} {
+    variable tokenRE
+
+    set tokens [regexp -all -inline -- $tokenRE $jsonText]
+    set nrTokens [llength $tokens]
+    set tokenCursor 0
+    return [parseValue $tokens $nrTokens tokenCursor]
+}
+
+# Throw an exception signaling an unexpected token
+proc json::unexpected {tokenCursor token expected} {
+     return -code error "unexpected token \"$token\" at position $tokenCursor; expecting $expected"
+}
+
+# Get rid of the quotes surrounding a string token and substitute the
+# real characters for escape sequences within it
+# @param token
+# @return unquoted unescaped value of the string contained in $token
+proc json::unquoteUnescapeString {token} {
+    set unquoted [string range $token 1 end-1]
+    return [subst -nocommands -novariables $unquoted]
+}
+
+# Parse an object member
+# @param tokens list of tokens
+# @param nrTokens length of $tokens
+# @param tokenCursorName name (in caller's context) of variable
+#                        holding current position in $tokens
+# @param objectDictName name (in caller's context) of dict
+#                       representing the JSON object of which to
+#                       parse the next member
+proc json::parseObjectMember {tokens nrTokens tokenCursorName objectDictName} {
+    upvar $tokenCursorName tokenCursor
+    upvar $objectDictName objectDict
+
+    set token [lindex $tokens $tokenCursor]
+    incr tokenCursor
+
+    set leadingChar [string index $token 0]
+    if {$leadingChar eq "\""} {
+        set memberName [unquoteUnescapeString $token]
+
+        if {$tokenCursor == $nrTokens} {
+            unexpected $tokenCursor "END" "\":\""
+        } else {
+            set token [lindex $tokens $tokenCursor]
+            incr tokenCursor
+
+            if {$token eq ":"} {
+                set memberValue [parseValue $tokens $nrTokens tokenCursor]
+                dict set objectDict $memberName $memberValue
+            } else {
+                unexpected $tokenCursor $token "\":\""
+            }
+        }
+    } else {
+        unexpected $tokenCursor $token "STRING"
     }
-
-    set c [string index $txt 0]
-    set txt [string range $txt 1 end]
-    return $c
 }
 
-proc json::json2dict {txt} {
-    return [_json2dict]
+# Parse the members of an object
+# @param tokens list of tokens
+# @param nrTokens length of $tokens
+# @param tokenCursorName name (in caller's context) of variable
+#                        holding current position in $tokens
+# @param objectDictName name (in caller's context) of dict
+#                       representing the JSON object of which to
+#                       parse the next member
+proc json::parseObjectMembers {tokens nrTokens tokenCursorName objectDictName} {
+    upvar $tokenCursorName tokenCursor
+    upvar $objectDictName objectDict
+
+    while true {
+        parseObjectMember $tokens $nrTokens tokenCursor objectDict
+
+        set token [lindex $tokens $tokenCursor]
+        incr tokenCursor
+
+        switch -exact $token {
+            "," {
+                # continue
+            }
+            "\}" {
+                break
+            }
+            default {
+                unexpected $tokenCursor $token "\",\"|\"\}\""
+            }
+        }
+    }
 }
 
-proc json::_json2dict {{txtvar txt}} {
-    upvar 1 $txtvar txt
+# Parse an object
+# @param tokens list of tokens
+# @param nrTokens length of $tokens
+# @param tokenCursorName name (in caller's context) of variable
+#                        holding current position in $tokens
+# @return parsed object (Tcl dict)
+proc json::parseObject {tokens nrTokens tokenCursorName} {
+    upvar $tokenCursorName tokenCursor
 
-    set state TOP
+    if {$tokenCursor == $nrTokens} {
+        unexpected $tokenCursor "END" "OBJECT"
+    } else {
+        set result [dict create]
 
-    set txt [string trimleft $txt]
-    while {$txt ne ""} {
-    	set c [string index $txt 0]
+        set token [lindex $tokens $tokenCursor]
 
-    	# skip whitespace
-    	while {[string is space $c]} {
-    	    getc
-    	    set c [string index $txt 0]
-    	}
+        if {$token eq "\}"} {
+            # empty object
+            incr tokenCursor
+        } else {
+            parseObjectMembers $tokens $nrTokens tokenCursor result
+        }
 
-	if {$c eq "\{"} {
-	    # object
-	    switch -- $state {
-		TOP {
-		    # we are dealing with an Object
-		    getc
-		    set state OBJECT
-		    set dictVal [dict create]
-		}
-		VALUE {
-		    # this object element's value is an Object
-		    dict set dictVal $name [_json2dict]
-		    set state COMMA
-		}
-		LIST {
-		    # next element of list is an Object
-		    lappend listVal [_json2dict]
-		    set state COMMA
-		}
-		default {
-		    return -code error "unexpected open brace in $state mode"
-		}
-	    }
-	} elseif {$c eq "\}"} {
-	    getc
-	    if {$state ne "OBJECT" && $state ne "COMMA"} {
-		return -code error "unexpected close brace in $state mode"
-	    }
-	    return $dictVal
-	} elseif {$c eq ":"} {
-	    # name separator
-	    getc
+        return $result
+    }
+}
 
-	    if {$state eq "COLON"} {
-		set state VALUE
-	    } else {
-		return -code error "unexpected colon in $state mode"
-	    }
-	} elseif {$c eq ","} {
-	    # element separator
-	    if {$state eq "COMMA"} {
-		getc
-		if {[info exists listVal]} {
-		    set state LIST
-		} elseif {[info exists dictVal]} {
-		    set state OBJECT
-		}
-	    } else {
-		return -code error "unexpected comma in $state mode"
-	    }
-	} elseif {$c eq "\""} {
-	    # string
-	    # capture quoted string with backslash sequences
-	    set reStr {(?:(?:\")(?:[^\\\"]*(?:\\.[^\\\"]*)*)(?:\"))}
-	    set string ""
-	    if {![regexp $reStr $txt string]} {
-		set txt [string replace $txt 32 end ...]
-		return -code error "invalid formatted string in $txt"
-	    }
-	    set txt [string range $txt [string length $string] end]
-	    # chop off outer ""s and substitute backslashes
-	    # This does more than the RFC-specified backslash sequences,
-	    # but it does cover them all
-	    set string [subst -nocommand -novariable \
-			    [string range $string 1 end-1]]
+# Parse the elements of an array
+# @param tokens list of tokens
+# @param nrTokens length of $tokens
+# @param tokenCursorName name (in caller's context) of variable
+#                        holding current position in $tokens
+# @param resultName name (in caller's context) of the list
+#                   representing the JSON array
+proc json::parseArrayElements {tokens nrTokens tokenCursorName resultName} {
+    upvar $tokenCursorName tokenCursor
+    upvar $resultName result
 
-	    switch -- $state {
-		TOP {
-		    return $string
-		}
-		OBJECT {
-		    set name $string
-		    set state COLON
-		}
-		LIST {
-		    lappend listVal $string
-		    set state COMMA
-		}
-		VALUE {
-		    dict set dictVal $name $string
-		    unset name
-		    set state COMMA
-		}
-	    }
-	} elseif {$c eq "\["} {
-	    # JSON array == Tcl list
-	    switch -- $state {
-		TOP {
-		    getc
-		    set state LIST
-		}
-		LIST {
-		    lappend listVal [_json2dict]
-		    set state COMMA
-		}
-		VALUE {
-		    dict set dictVal $name [_json2dict]
-		    set state COMMA
-		}
-		default {
-		    return -code error "unexpected open bracket in $state mode"
-		}
-	    }
-	} elseif {$c eq "\]"} {
-	    # end of list
-	    getc
-	    if {![info exists listVal]} {
-		#return -code error "unexpected close bracket in $state mode"
-		# must be an empty list
-		return ""
-	    }
+    while true {
+        lappend result [parseValue $tokens $nrTokens tokenCursor]
 
-	    return $listVal
-	} elseif {0 && $c eq "/"} {
-	    # comment
-	    # XXX: Not in RFC 4627
-	    getc
-	    set c [getc]
-	    switch -- $c {
-		/ {
-		    # // comment form
-		    set i [string first "\n" $txt]
-		    if {$i == -1} {
-			set txt ""
-		    } else {
-			set txt [string range $txt [incr i] end]
-		    }
-		}
-		* {
-		    # /* comment */ form
-		    getc
-		    set i [string first "*/" $txt]
-		    if {$i == -1} {
-			return -code error "incomplete /* comment"
-		    } else {
-			set txt [string range $txt [incr i] end]
-		    }
-		}
-		default {
-		    return -code error "unexpected slash in $state mode"
-		}
-	    }
-	} elseif {[string match {[-0-9]} $c]} {
-	    # one last check for a number, no leading zeros allowed,
-	    # but it may be 0.xxx
-	    string is double -failindex last $txt
-	    if {$last > 0} {
-        regexp -- {-?[\d\.]+([eE][\+-]?\d+)?} $txt num
-		set txt [string range $txt $last end]
+        if {$tokenCursor == $nrTokens} {
+            unexpected $tokenCursor "END" "\",\"|\"\]\""
+        } else {
+            set token [lindex $tokens $tokenCursor]
+            incr tokenCursor
 
-		switch -- $state {
-		    TOP {
-			return $num
-		    }
-		    LIST {
-			lappend listVal $num
-			set state COMMA
-		    }
-		    VALUE {
-			dict set dictVal $name $num
-			set state COMMA
-		    }
-		    default {
-			getc
-			return -code error "unexpected number '$c' in $state mode"
-		    }
-		}
-	    } else {
-		getc
-		return -code error "unexpected '$c' in $state mode"
-	    }
-	} elseif {[string match {[ftn]} $c]
-		  && [regexp {^(true|false|null)} $txt val]} {
-	    # bare word value: true | false | null
-	    set txt [string range $txt [string length $val] end]
+            switch -exact $token {
+                "," {
+                    # continue
+                }
+                "\]" {
+                    break
+                }
+                default {
+                    unexpected $tokenCursor $token "\",\"|\"\]\""
+                }
+            }
+        }
+    }
+}
 
-	    switch -- $state {
-		TOP {
-		    return $val
-		}
-		LIST {
-		    lappend listVal $val
-		    set state COMMA
-		}
-		VALUE {
-		    dict set dictVal $name $val
-		    set state COMMA
-		}
-		default {
-		    getc
-		    return -code error "unexpected '$c' in $state mode"
-		}
-	    }
-	} else {
-	    # error, incorrect format or unexpected end of text
-	    return -code error "unexpected '$c' in $state mode"
-	}
+# Parse an array
+# @param tokens list of tokens
+# @param nrTokens length of $tokens
+# @param tokenCursorName name (in caller's context) of variable
+#                        holding current position in $tokens
+# @return parsed array (Tcl list)
+proc json::parseArray {tokens nrTokens tokenCursorName} {
+    upvar $tokenCursorName tokenCursor
+
+    if {$tokenCursor == $nrTokens} {
+        unexpected $tokenCursor "END" "ARRAY"
+    } else {
+        set result {}
+
+        set token [lindex $tokens $tokenCursor]
+
+        set leadingChar [string index $token 0]
+        if {$leadingChar eq "\]"} {
+            # empty array
+            incr tokenCursor
+        } else {
+            parseArrayElements $tokens $nrTokens tokenCursor result
+        }
+
+        return $result
+    }
+}
+
+# Parse a value
+# @param tokens list of tokens
+# @param nrTokens length of $tokens
+# @param tokenCursorName name (in caller's context) of variable
+#                        holding current position in $tokens
+# @return parsed value (dict, list, string, number)
+proc json::parseValue {tokens nrTokens tokenCursorName} {
+    upvar $tokenCursorName tokenCursor
+
+    if {$tokenCursor == $nrTokens} {
+        unexpected $tokenCursor "END" "VALUE"
+    } else {
+        set token [lindex $tokens $tokenCursor]
+        incr tokenCursor
+
+        set leadingChar [string index $token 0]
+        switch -exact $leadingChar {
+            "\{" {
+                return [parseObject $tokens $nrTokens tokenCursor]
+            }
+            "\[" {
+                return [parseArray $tokens $nrTokens tokenCursor]
+            }
+            "\"" {
+                # quoted string
+                return [unquoteUnescapeString $token]
+            }
+            "t" -
+            "f" -
+            "n" {
+                # bare word: true, false or null
+                return $token
+            }
+            default {
+                # number?
+                if {[string is double -strict $token]} {
+                    return $token
+                } else {
+                    unexpected $tokenCursor $token "VALUE"
+                }
+            }
+        }
     }
 }
 
